--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -6,7 +6,6 @@ jobs:
   run-shell-command:
       runs-on: ubuntu-latest
       steps:
-          - name: echo a string
-          string
-            run: echo "welcome"
-
+        - name: echo a string
+          run: 
+              node -v
