--- a/.github/workflows/call_github_actions.yml
+++ b/.github/workflows/call_github_actions.yml
@@ -4,8 +4,10 @@ jobs:
   run-github-actions:
     runs-on: ubuntu-latest
     steps:
+    - id: call1
     - name : Call GH Action 
       uses: actions/hello-world-javascript-action@v1
       with:
         who-to-greet: Raminder
-        
+    - name : Display output
+      run: echo "{{ steps.call1.outputs.time }}"
